# ContextPrime

./: .gitignore  README.md  pyproject.toml
component_scoring/: __main__.py  cli.py  (+2 more)
thalamus/: README.md  pyproject.toml
thalamus/_shared/: __init__.py
thalamus/baselines/: bm25_selector.py  cmd_baseline_lookup.py  component_catalog.py  dense_selector.py  tfidf_selector.py
thalamus/component_scoring/: __init__.py  __main__.py  cli.py  cli_args_parser.py  cli_builders.py
thalamus/component_scoring/enrichment/: __init__.py
thalamus/component_scoring/shared/: state.py
thalamus/component_scoring/tools/: __init__.py
thalamus/context_selectors/: __init__.py  __main__.py  cli.py  cli_args_parser.py  context_selector.py
thalamus/context_selectors/by_classifier/: cmd_classify.py
thalamus/context_selectors/by_clusters/: cluster_selector.py
thalamus/docs/: IMPLEMENTATION_PLAN.md  jiuwenswarm-integration-plan.md  thalamus.md
thalamus/oracle/: __init__.py  __main__.py  cli.py  cmd_list_versions.py  cmd_status.py  cmd_tune.py
thalamus/oracle/classifier/: classifier_evaluator.py  component_classifier_trainer.py  log_splitter.py
thalamus/oracle/evolutionary/: config_builder_step02_collect_texts.py  config_builder_step03_fit_clusters.py  config_builder_step04_compute_cluster_centroids.py  config_builder_step05_assign_clusters.py  config_builder_step06_run_evolutionary_search.py  config_builder_step07_serialize_output.py  pareto_validator.py
thalamus/oracle/hyperparameters_tuner/: classifier_hyperparameter_search.py  clusters_lambda_tuner.py
thalamus/oracle/rebuild_recommender/: distribution_monitor.py  rebuild_recommendation_checker.py
thalamus/oracle_builder/: __init__.py  __main__.py  cli.py  cli_args_parser.py  cmd_status.py  cmd_tune.py
thalamus/oracle_builder/evolutionary/: config_builder_step05_assign_clusters.py
thalamus/oracle_builder/hyperparameters_tuner/: clusters_lambda_tuner.py
thalamus/oracle_builder/rebuild_recommender/: cmd_check_rebuild.py  distribution_monitor.py
thalamus/research/: __init__.py  cli.py  cli_args_parser.py
thalamus/research/bandit/: __init__.py
thalamus/research/baselines/: all_selector.py  dense_selector.py  tfidf_selector.py
thalamus/research/cross_path/: __init__.py
thalamus/research/evaluation/: benchmark_runner.py  cmd_eval.py
thalamus/research/meta_learning/: __init__.py  cmd_meta_learning.py  component_fingerprint.py  knowledge_base.py  transfer_initializer.py
thalamus/research/set_quality/: __init__.py  cmd_set_quality.py  fitness_function.py  interaction_features.py  outcome_dataset.py  set_quality_model.py
thalamus/runners/: run_01_score.sh
thalamus/scoring/: __main__.py  cli.py  cli_args_parser.py  cli_builders.py
thalamus/scoring/enrichment/: __init__.py  score_enricher.py
thalamus/scoring/shared/: summary_printer.py
thalamus/scoring/shared/metrics/: metric_bert_score.py
thalamus/selection/: __init__.py  __main__.py  cli_args_parser.py  context_selector.py
thalamus/selection/by_classifier/: classifier_selector.py  cmd_classify.py
thalamus/selection/by_clusters/: cluster_selector.py
thalamus/shared/: __init__.py
thalamus/src/thalamus/oracle/: __main__.py  cli.py  cli_args_parser.py  cmd_status.py  cmd_tune.py
thalamus/src/thalamus/oracle/classifier/: classifier_evaluator.py  component_classifier_trainer.py  log_splitter.py
thalamus/src/thalamus/oracle/evolutionary/: config_builder_step03_fit_clusters.py  config_builder_step04_compute_cluster_centroids.py  config_builder_step05_assign_clusters.py  config_builder_step06_run_evolutionary_search.py  config_builder_step07_serialize_output.py
thalamus/src/thalamus/oracle/hyperparameters_tuner/: classifier_hyperparameter_search.py  clusters_lambda_tuner.py
thalamus/src/thalamus/oracle/rebuild_recommender/: cmd_check_rebuild.py  cmd_staleness_status.py  distribution_monitor.py  rebuild_recommendation_checker.py
thalamus/src/thalamus/scoring/: __main__.py  cli.py
thalamus/src/thalamus/scoring/enrichment/: score_enricher.py
thalamus/src/thalamus/scoring/shared/: state_saver.py
thalamus/src/thalamus/selection/: __main__.py
thalamus/src/thalamus/selection/by_classifier/: classifier_selector.py
thalamus/src/thalamus/selection/by_clusters/: cluster_selector.py
thalamus/tests/: run_tests.py  test_skill_discovery.py
thalamus_research/: README.md  cli_args_parser.py  pyproject.toml
thalamus_research/ablations/: __init__.py  cmd_ablation.py  no_bookend_selector.py  topk_selector.py
thalamus_research/bandit/: cmd_bandit.py  convergence.py
thalamus_research/baselines/: __init__.py  bm25_selector.py  dense_selector.py  protocol.py
thalamus_research/cross_path/: cmd_cross_path.py  co_inclusion_extractor.py  fitness_augmentor.py
thalamus_research/docs/: research-plan.md  thalamus_paper.md  thalamus_slides.md
thalamus_research/evaluation/: __init__.py  benchmark_runner.py  cmd_eval.py
thalamus_research/meta_learning/: cmd_meta_learning.py  component_fingerprint.py  knowledge_base.py  transfer_initializer.py
thalamus_research/runners/: _config.sh  run_01_baselines.sh  run_02_ablation.sh  run_03_cross_path.sh  run_04_bandit.sh  run_05_set_quality.sh  run_06_meta_learning.sh  run_all_experiments.sh
thalamus_research/set_quality/: cmd_set_quality.py  interaction_features.py  outcome_dataset.py  set_quality_model.py
thalamus_research/src/thalamus_research/: cli.py
thalamus_research/src/thalamus_research/ablations/: cmd_ablation.py  path_b_only_selector.py  single_budget_selector.py  topk_selector.py
thalamus_research/src/thalamus_research/bandit/: cmd_bandit.py  convergence.py
thalamus_research/src/thalamus_research/baselines/: random_selector.py  tfidf_selector.py
thalamus_research/src/thalamus_research/cross_path/: cmd_cross_path.py
thalamus_research/src/thalamus_research/evaluation/: benchmark_runner.py  cmd_eval.py
thalamus_research/src/thalamus_research/meta_learning/: cmd_meta_learning.py  knowledge_base.py
thalamus_research/src/thalamus_research/set_quality/: cmd_set_quality.py  fitness_function.py
(+77 files in other folders)
