[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Research package ─────────────────────────────────────────────────────────
# Never imported by production code.  Adds the thalamus-research CLI and
# all R1-R5 experimentation tooling.
[project]
name = "thalamus-research"
version = "0.1.0"
description = "Research tooling for THALAMUS: baselines, evaluation harness, ablations, and R1–R5 experiments."
requires-python = ">=3.10"
dependencies = [
    "thalamus",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]

[project.optional-dependencies]
sentence  = ["sentence-transformers>=2.2"]
bertscore = ["bert-score>=0.3"]

[project.scripts]
thalamus-research = "thalamus_research.cli:main"

# ── Workspace source resolution ──────────────────────────────────────────────
# Tell uv to use the local workspace version of thalamus, not PyPI.
[tool.uv.sources]
thalamus = { workspace = true }

# ── Package discovery ─────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src/thalamus_research"]
